--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -1,8 +1,99 @@
-/* body {
-      background-color: #000000;
-      color: #fff;
-      background-image: url("/public/assets/red-desktop.jpg");
-      background-position:top;
-      background-repeat: no-repeat;
-      background-size:cover;
-} */
+.main_container {
+	display: grid;
+	height: 100vh;
+	grid-gap: 1rem;
+	grid-template-columns: 5% 1fr 5%;
+	grid-template-rows: 50% 1fr;
+	padding-bottom: 0.5rem;
+	margin: 0 10rem;
+	text-align: center;
+	font-family: var(--ff-barlow);
+}
+
+.main_heading {
+	padding: 2rem;
+	font-weight: 400;
+	font-size: 1.5rem;
+	margin-top: 12rem;
+	margin-bottom: 5rem;
+	letter-spacing: 1rem;
+	color: var(--white-color);
+	font-family: var(--ff-barlow);
+}
+
+.heading_icons {
+	margin-top: 3rem;
+	color: var(--grey-color);
+}
+
+.heading_icons .icon {
+	color: var(--cta-prim-color);
+}
+
+.join_btn {
+	margin-top: 7rem;
+	font-size: 1rem;
+	cursor: pointer;
+	text-align: center;
+	width: fit-content;
+	padding: 1rem 2rem;
+	border-radius: 2rem;
+	letter-spacing: 0.5rem;
+	color: var(--white-color);
+	font-family: var(--ff-roboto);
+	border: 1px solid var(--primary-color);
+	background-color: var(--cta-prim-color);
+}
+
+.join_btn:hover {
+	background-color: var(--cta-sec-color);
+}
+
+.categories {
+	margin-top: 8rem;
+}
+
+.categories_heading {
+	font-size: 1.5rem;
+	padding: 0 0.3rem;
+	letter-spacing: 0.1rem;
+	transition: all 0.8s ease-out;
+	color: var(--primary-color);
+	font-family: var(--ff-barlow);
+	background-color: var(--grey-color);
+}
+
+.category {
+	gap: 2rem;
+	width: 600px;
+	margin: 5rem 0;
+	height: 600px;
+	border: 1px solid var(--white-color);
+}
+
+.category_name {
+	padding-left: 1rem;
+	color: var(--prim-color);
+	border: 1px solid var(--grey-color);
+	background-color: var(--grey-color);
+}
+
+.category_img {
+	cursor: pointer;
+	filter: grayscale(100%);
+}
+
+.category_img:hover {
+	-webkit-filter: grayscale(0);
+	filter: grayscale(0);
+	box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+	transition: all 0.5s ease-out;
+}
+
+.footer {
+	padding: 3rem 0;
+	font-size: 0.8rem;
+	letter-spacing: 0.1rem;
+	color: var(--grey-color);
+	font-family: var(--ff-roboto);
+}
