--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -20,6 +20,7 @@
       cursor: pointer;
       color: var(--cta-prim-color); 
       font-family: var(--ff-barlow);
+      font-weight: 600;
 }
 
 .nav_btn {
