refactor: refactor videolisting page

--- a/src/components/VideoCard/videocard.css
+++ b/src/components/VideoCard/videocard.css
@@ -1,43 +1,37 @@
-.card_container {
-      width: 100%;
-      background-color: var(--prim-color);
-      /* border-radius: 1rem; */
-      cursor: pointer;
-      /* border: 1px solid greenyellow; */
-}
-
-.parent {
-      padding: 2rem;
-      gap: 25px;
-      justify-content: center;
-}
-
-.card_img {
-      object-fit: contain;
-      width: 100%;
-      height: fit-content;
-}
-
 .card_details_box {
-      gap: 10px;
-      padding: 0.5rem 0;
-      justify-content: space-around;
+      padding: 1rem 0;
+}
+
+.adjust_image {
+      cursor: pointer;
+}
+
+.avatar_img {
+      width: 2.5rem;
+      height: 2.5rem;
+      border-radius: 50%;
+      object-fit: cover;
+      border-style: groove;
+      vertical-align: middle;
+      border-color: var(--cta-sec-color);
+}
+
+.video_details_box {
+      padding-left: 0.5rem;
 }
 
 .card_title {
       font-size: 0.9rem;
       font-weight: 400;
-      color: var(--white-color);
       overflow: hidden;
-      text-overflow: ellipsis;
+      width: 19rem;
       white-space: nowrap;
-      width: 18rem;
+      text-overflow: ellipsis;
+      color: var(--white-color);
 }
 
 .channel_box {
-      gap: 5px;
       padding: 0.3rem 0;
-      /* color: red; */
 }
 
 .creator_box {
@@ -46,39 +40,22 @@
 
 .channel_name {
       font-size: 0.75rem;
-      color: grey;
+      color: var(--grey-color);
 }
 
 .verify_icon {
-      color: grey;
       margin-top: 0.15rem;
       font-size: 0.75rem;
-      padding-left: 0rem;
+      color: var(--grey-color);
 }
 
-.nav_right {
+.icon_box {
       flex-basis: 30%;
-      gap: 1rem;
+      gap: 1.8rem;
 }
 
 .sidebar_icons {
-      color: grey;
-      /* margin-top: 0.15rem; */
-      font-size: 0.8rem;
+      font-size: 1rem;
+      cursor: pointer;
+      color: var(--grey-color);
 }
-
-.avatar_img {
-      padding-left: 0;
-      width: 2.5rem;
-      height: 2.5rem;
-      border-radius: 50%;
-      object-fit: cover;
-      /* vertical-align: middle; */
-      border-color: var(--cta-prim-color);
-      border-style: groove;
-}
-
-
-
-
-
