--- a/src/pages/Playlist/playlist.css
+++ b/src/pages/Playlist/playlist.css
@@ -6,7 +6,7 @@
 .playlist_container {
       width: 15rem;
       height: 15rem;
-      border: 1px solid white;
+      border: 1px solid var(--white-color);
       margin: 0 auto;
       gap: 2rem;
 }
