feat: Add Watch Later Page

--- a/src/pages/Playlist/playlist.css
+++ b/src/pages/Playlist/playlist.css
@@ -1,9 +1,9 @@
-.playlist_wrapper {
+.list_wrapper {
       height: 100vh;
       margin: 13rem 7.8rem 0 6.5rem;
 }
 
-.playlist_container {
+.list_container {
       width: 15rem;
       height: 15rem;
       border: 1px solid var(--white-color);
