feat: Add Authentication

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
       --sec-color: #878787;
       --cta-prim-color: #e50914;
       --cta-sec-color: #db0510;
+      --auth-color: rgb(17, 16, 16);
 
       --ff-barlow: 'Barlow', sans-serif;
       --ff-roboto: 'Roboto', sans-serif;
