--- a/src/pages/Auth/auth.css
+++ b/src/pages/Auth/auth.css
@@ -1,59 +1,135 @@
 #auth_container {
-      margin: 0 auto;
-      margin-top: 10rem;
-      padding-bottom: 1rem;
-  }
-  
-  .input_field .input_label .input_box {
-      color: var(--grey-color);
-  }
-  
-  #input_subheading {
-      color: var(--secondary-color);
-      font-size: 0.9rem;
-      font-weight: 400;
-  }
-  
-  #login_button {
-      color: var(--white-color);
-  }
-  
-  input.input_checkbox {
-      width: 1rem;
-      height: 1rem;
-  }
-  
-  .checkbox_notify {
-      padding-top: 1.1rem;
-      font-size: 0.9rem;
-  }
-  
-  /* logout */
-  
-  .logout_container {
-      margin-top: 10rem;
-  }
-  
-  .logout_box {
-      box-shadow: 1px 1px 1px 5px var(--shadow-color);
-      width: 40rem;
-      height: 20rem;
-      margin: 0 auto;
-  }
-  
-  .logout_text {
-      margin: 1rem;
-  }
-  
-  .logout_box .link {
-      color: var(--secondary-color);
-  }
-  
-  .form_label {
-      color: var(--secondary-color);
-  }
-  
-  .input_container .toast {
-      display: flex;
-      background-color: var(--secondary-color);
-  }
+    margin: 0 auto;
+    margin-top: 10rem;
+    padding-bottom: 1rem;
+    box-shadow: none;
+    font-family: var(--ff-barlow);
+    background-color: var(--auth-color);
+}
+
+.input_field {
+    margin: 0 2rem;
+}
+
+.input_heading {
+    margin: 1.5rem 0;
+    text-align: start;
+    letter-spacing: 0.1rem;
+    color: var(--white-color);
+}
+
+.input_label {
+    font-size: 0.9rem;
+    padding: 0.4rem 0;
+    letter-spacing: 0.05rem;
+    font-weight: 300;
+    font-weight: var(--fw-bold);
+    color: var(--white-color);
+}
+
+.input_field .form_label {
+    padding-left: 0.2rem;
+    color: var(--cta-prim-color);
+}
+
+.input_box {
+    padding: 0.4rem 0.6rem;
+    width: 100%;
+    margin-top: 1rem;
+    border-radius: 0;
+    color: var(--white-color);
+    background-color: var(--prim-color);
+    border: 1px solid var(--shadow-color);
+}
+
+.inp_checkbox {
+    gap: 0.5rem;
+}
+
+input.input_checkbox {
+    width: 0.8rem;
+    height: 0.8rem;
+    cursor: pointer;
+}
+
+.checkbox_notify {
+    padding-top: 1.1rem; 
+    font-size: 0.8rem;
+}
+
+.auth_btn {
+    margin: 0.8rem 0;
+    font-size: 0.9rem;
+	cursor: pointer;
+	text-align: center;
+	padding: 0.4rem 1rem;
+	letter-spacing: 0.2rem;
+	color: var(--white-color);
+	font-family: var(--ff-roboto);
+	border: 1px solid var(--primary-color);
+	background-color: var(--cta-sec-color);
+}
+
+.forgot_pwd_box {
+    align-self: center;
+}
+
+.forgot_pwd {
+    padding-top: 1.1rem; 
+    font-size: 0.8rem;
+    color: var(--grey-color);
+}
+
+.input_subheading {
+    margin: 0.5rem 0;
+    text-align: center;
+    font-size: 0.8rem;
+    align-self: center;
+}
+
+#input_subheading {
+    font-size: 0.9rem;
+    font-weight: 500;
+    font-family: var(--ff-barlow);
+    color: var(--white-color);
+}
+
+#login_button {
+    color: var(--white-color);
+}
+
+/* input errors */
+
+.input_box_error {
+    padding: 1rem;
+    background-color: var(--grey-color);
+    border: 1px solid var(--cta-sec-color);
+    color: var(--cta-sec-color);
+}
+
+.input_error {
+    margin-top: 1rem;
+    color: var(--cta-sec-color);
+}
+
+/* logout */
+
+.logout_container {
+    margin-top: 10rem;
+}
+
+.logout_box {
+    width: 40rem;
+    height: 20rem;
+    margin: 2rem auto;
+    box-shadow: 1px 1px 1px 5px var(--grey-color);
+}
+
+.logout_text {
+    margin: 1rem;
+}
+
+.input_container .toast {
+    display: flex;
+    background-color: var(--cta-sec-color);
+}
