feat: Add Like/Dislike feature from videoListing

--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,8 @@ body {
       background-color: var(--prim-color);
 	color: var(--sec-color);
 }
+
+button {
+      background-color: var(--prim-color);
+      border: none;
+}
