--- a/src/components/VideoCard/videocard.css
+++ b/src/components/VideoCard/videocard.css
@@ -59,3 +59,12 @@
       cursor: pointer;
       color: var(--grey-color);
 }
+
+.like_icons {
+      font-size: 1.1rem;
+      border: none;
+      right: 0.5rem;
+      cursor: pointer;
+      color: var(--grey-color);
+      background-color: var(--prim-color);
+}
