--- a/src/pages/Playlist/playlist.css
+++ b/src/pages/Playlist/playlist.css
@@ -22,3 +22,61 @@
       color: var(--cta-sec-color);
 }
 
+.clear_all_btn {
+      align-self: center;
+      margin-right: 8rem;
+}
+
+.create_playlist_btn {
+      border: 1px solid white;
+      color: black;
+      padding: 0.2rem 1rem;
+}
+
+.playlist_text {
+      font-size: 0.8rem;
+}
+
+/* Modal */
+
+.create_playlist_modal_wrapper {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: 99;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background-color: aqua;
+}
+
+.create_playlist_modal {
+      border-radius: 0.5rem;
+      max-width: 45rem;
+      background-color: aliceblue;
+}
+
+.create_playlist_modal .input {
+      border-bottom: 1px solid grey;
+}
+
+.create_playlist_modal .btn_playlist_create {
+      width: 100%;
+      border: 0;
+      cursor: pointer;
+}
+
+.create_playlist_modal .icon_circle_plus {
+      margin-right: 0.5rem;
+      cursor: pointer;
+}
+
+.modal_close_button {
+      padding: 0.5rem;
+      border-bottom: 1px solid grey;
+}
