--- a/src/components/VideoCard/videocard.css
+++ b/src/components/VideoCard/videocard.css
@@ -83,3 +83,92 @@
 .icon_btn .delete_btn:hover {
       color: var(--white-color);
 }
+
+/* Modal */
+
+.playlist_modal_container {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: 99;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      /* background-color: rgba(0, 0, 0, .5); */
+}
+
+.create_playlist_wrapper {
+      border-radius: 0.5rem;
+      max-width: 40rem;
+      margin: 0 1rem;
+      /* background-color: var(--auth-color); */
+      background-color: aliceblue;
+}
+
+.create_playlist_wrapper button {
+      text-align: left;
+      width: 100%;
+      cursor: pointer;
+      border: none;
+}
+
+.create_playlist_wrapper .icons {
+      margin-right: 0.5rem;
+}
+
+.btn_modal_close {
+      text-align: right;
+      font-size: 1.3rem;
+      display: flex;
+      padding: 1rem;
+}
+
+.lists_playlist {
+      padding: 0.3rem;
+      height: 10rem;
+      overflow-y: scroll;
+      margin-top: 1rem;
+      width: 35rem;
+      display: flex;
+      flex-direction: column;
+}
+
+.lists_playlist .playlist_one {
+      padding: 0.5rem;
+      margin-bottom: 0.2rem;
+      background-color: transparent;
+      border-bottom: 1px solid var(--shadow-color);
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+
+}
+
+.add_new_playlist {
+
+}
+
+.input_playlist_wrapper {
+      margin: 0 0.3rem;
+}
+
+.input_playlist_wrapper .input {
+      padding: 0.5rem;
+      border-radius: 0.2rem;
+      border: none;
+}
+
+.btn_playlist_create {
+      padding: 0.7rem 0.5rem;
+      border-bottom-left-radius: 0.5rem;
+      border-bottom-right-radius: 0.5rem;
+}
+
+.btn_playlist_create .icon_circle_plus {
+      color: white;
+}
