--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,8 @@
       --cta-prim-color: #e50914;
       --cta-sec-color: #db0510;
       --auth-color: rgb(17, 16, 16);
+      --bckg-modal-color: #040c1d82;
+      --tansparent-color: rgba(0, 0, 0, .5);
 
       --ff-barlow: 'Barlow', sans-serif;
       --ff-roboto: 'Roboto', sans-serif;
