--- a/src/components/VideoCard/videocard.css
+++ b/src/components/VideoCard/videocard.css
@@ -88,33 +88,30 @@
 
 .playlist_modal_container {
       position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: 99;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
       top: 0;
       left: 0;
       right: 0;
       bottom: 0;
-      /* background-color: rgba(0, 0, 0, .5); */
+      width: 100%;
+      height: 100%;
+      z-index: 99;
+      background-color: var(--tansparent-color);
 }
 
 .create_playlist_wrapper {
-      border-radius: 0.5rem;
-      max-width: 40rem;
+      width: 20rem;
+      height: 15rem;
       margin: 0 1rem;
-      /* background-color: var(--auth-color); */
-      background-color: aliceblue;
+      border-radius: 0.5rem;
+      background-color: var(--auth-color);
 }
 
 .create_playlist_wrapper button {
-      text-align: left;
       width: 100%;
       cursor: pointer;
       border: none;
+      text-align: left;
+      background-color: var(--grey-color);
 }
 
 .create_playlist_wrapper .icons {
@@ -122,45 +119,48 @@
 }
 
 .btn_modal_close {
+      padding: 1rem;
       text-align: right;
       font-size: 1.3rem;
-      display: flex;
-      padding: 1rem;
 }
 
 .lists_playlist {
       padding: 0.3rem;
-      height: 10rem;
-      overflow-y: scroll;
+      height: 5rem;
       margin-top: 1rem;
-      width: 35rem;
-      display: flex;
-      flex-direction: column;
+      width: 20rem;
+      overflow-y: scroll;
+}
+
+.lists_playlist::-webkit-scrollbar {
+      color: var(--grey-color);
 }
 
 .lists_playlist .playlist_one {
       padding: 0.5rem;
       margin-bottom: 0.2rem;
+      font-size: 0.7rem;
+      cursor: pointer;
       background-color: transparent;
-      border-bottom: 1px solid var(--shadow-color);
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-
-}
-
-.add_new_playlist {
-
+      color: var(--cta-sec-color);
+      border-bottom: 1px solid var(--grey-color);  
 }
 
 .input_playlist_wrapper {
-      margin: 0 0.3rem;
+      padding: 0 0.3rem;
+      color: var(--grey-color);
+      background-color: var(--grey-color);
 }
 
 .input_playlist_wrapper .input {
       padding: 0.5rem;
       border-radius: 0.2rem;
       border: none;
+      background-color: var(--light-grey-color);
+}
+
+.input_playlist_wrapper .input::placeholder {
+      color: var(--prim-color);
 }
 
 .btn_playlist_create {
@@ -170,5 +170,5 @@
 }
 
 .btn_playlist_create .icon_circle_plus {
-      color: white;
+      color: var(--white-color);
 }
