--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@
       --sec-color: #878787;
       --cta-prim-color: #e50914;
       --cta-sec-color: #db0510;
-      --auth-color: rgb(17, 16, 16);
+      --auth-color: #0b090a;
       --bckg-modal-color: #040c1d82;
       --tansparent-color: rgba(0, 0, 0, .5);
 
