--- a/src/pages/Playlist/playlist.css
+++ b/src/pages/Playlist/playlist.css
@@ -6,9 +6,14 @@
       grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
 }
 
+/* .playlist_container {
+    margin-top: 10rem;
+    height: 100vh;
+} */
+
 .list_wrapper {
       height: 100vh;
-      margin: 13rem 7.8rem 0 6.5rem;
+      margin: 17rem 7.8rem 0 6.5rem;
 }
 
 .list_container {
