--- a/src/components/VideoCard/videocard.css
+++ b/src/components/VideoCard/videocard.css
@@ -131,21 +131,22 @@
 } */
 
 .lists_playlist {
-    padding: 1rem;
-    height: 5rem;
-    margin-top: 1rem;
+    padding: 0.3rem 0 0 1rem ;
+    height: 6rem;
+    gap: 0.5rem;
     width: 100%;
     background-color: var(--light-grey-color);
-    border: 1px solid var(--light-grey-color);
     overflow-y: scroll;
 }
 
 .playlist_list_btns  {
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    gap: 0.5rem;
     font-weight: 500;
 }
 
-.playlist_list_btns i {
+.lists_playlist .playlist_list_btns .playlist_one {
+    color: var(--cta-sec-color);
     font-size: 1rem;
 }
 
@@ -180,20 +181,21 @@
     color: var(--prim-color);
 }
 
-.btn_playlist_create {
-    padding: 0.7rem 0.5rem;
+/* .btn_playlist_create {
+    padding: 0.9rem 0.5rem;
     border-bottom-left-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
-}
+} */
 
-.btn_playlist_create .icon_circle_plus {
+/* .btn_playlist_create .icon_circle_plus {
     color: var(--white-color);
-}
+    font-size: 2rem;
+} */
 
 .create_playlist_wrapper .create_playlist_btn {
     align-self: center;
     text-align: center;
-    padding: 0.4rem 0; 
+    padding: 0.6rem 0; 
     border: 0;
     border-radius: 8px;
     cursor: pointer;
