fix: remove warnings

--- a/src/pages/SingleVideo/singlevideo.css
+++ b/src/pages/SingleVideo/singlevideo.css
@@ -18,7 +18,6 @@
     gap: 4rem;
 }
 
-
 .icons_box {
     flex-basis: 10%;
     gap: 8rem;
@@ -42,4 +41,5 @@
 
 .creator_name i {
     padding-left: 0.5rem;
+    color: #0077b6;
 }
