--- a/src/components/VideoCard/videocard.css
+++ b/src/components/VideoCard/videocard.css
@@ -39,14 +39,14 @@
 }
 
 .channel_name {
-    font-size: 0.75rem;
+    font-size: 0.85rem;
     color: var(--grey-color);
 }
 
-.verify_icon {
-    margin-top: 0.15rem;
-    font-size: 0.75rem;
-    color: var(--grey-color);
+.creator_box i {
+    margin-top: 0.1rem;
+    font-size: 0.9rem;
+    color: #0077b6;
 }
 
 .icon_box {
@@ -104,31 +104,12 @@
     border-radius: 0.5rem;
     background-color: var(--grey-color);
     color: var(--primary-color);
-    border: 1px solid var(--red-color);
 }
 
 .create_playlist_wrapper .modal_wrapper {
     padding: 2rem;
     gap: 1.5rem;
 }
-
-/* .create_playlist_wrapper button {
-    width: 100%;
-    cursor: pointer;
-    border: none;
-    text-align: left;
-    background-color: var(--grey-color);
-} */
-
-/* .create_playlist_wrapper .icons {
-    margin-right: 0.5rem;
-} */
-
-/* .btn_modal_close {
-    padding: 0rem;
-    text-align: right;
-    font-size: 1.3rem;
-} */
 
 .lists_playlist {
     padding: 0.3rem 0 0 1rem ;
